# trabalho-rust-GCC1919

./: Cargo.toml  bd.csv  database.db
src/: main.rs  tests.rs
src/poll/: mod.rs
src/vote/: mod.rs
