[package]
name = "rust-trabalho"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
rusqlite = { version = "0.32.0", features = ["bundled"] }

[dependencies.uuid]
version = "1.11.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
